fix(css): text is unreadable because the colors of the mark have been changed
Solution:
- Applies a higher contrast between colors, using dark text on a light background and vice versa.

Steps:
- Use black text on light colors.
- For selected text and `$color-brand-2` buttons on a light background.

--- a/companies/woowbe/practice/vue-app/src/assets/scss/components/_components-button.scss
+++ b/companies/woowbe/practice/vue-app/src/assets/scss/components/_components-button.scss
@@ -23,7 +23,7 @@
 	transition: transform 0.2s;
 
 	&:hover {
-		background-color: $color-brand-1;
+		background-color: mix($color-black, $color-brand-2, 15%);
 	}
 
 	&:active {
